turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: type mismatch;
 found   : String("L")
 required: Char
		case "L" => gauche(); avance();
                     ^LangtonsAnt:23: error: type mismatch;
 found   : String("R")
 required: Char
		case "R" => droite(); avance();
                     ^